# ATLAS

./: .gitignore  AUTHORS  DISCLAIMER  HelloWorld.atl  LICENSE  MANIFEST.in  README.md  atlas.py  pyproject.toml
atlas/: __init__.py  atlas.py
atlas/lib/: atl_importer.py  core.py  error.py  executor.py  expect.py  linker_loader.py  screen.py
docs/source/: chain.rst  conf.py  core.rst  expect.rst  index.rst  installation.rst  meta.rst  modules.rst  rule.rst  scripts.rst
lib/: core.py  executor.py  linker_loader.py  screen.py
src/: atlas.py
src/lib/: core.py  executor.py  linker_loader.py
