# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malware-atlas"
version = "0.2.12"
description = "ATLAS - Malware Analysis Description"
readme = "README.md"
authors = [{ name = "Mert Degirmenci"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["malware", "atlas", "threat"]
dependencies = [
    "PyYAML",
    "requests",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["python-magic"]

[project.urls]
Homepage = "https://github.com/malware-atlas/atlas"

[project.scripts]
atlas = "atlas.atlas:main"